[package]
name = "auth0_rs"
version = "0.1.0"
authors = ["Mingwei Zhang"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/digizeph/auth0_rs"
documentation = "https://docs.rs/auth0_rs"
description = """
Simple Auth0 library for token validation.
"""
keywords = ["auth0", "oauth"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "7.2.0"
